--- a/src/components/leftBar/leftBar.scss
+++ b/src/components/leftBar/leftBar.scss
@@ -1,9 +1,14 @@
+@import "../../styles.scss";
+
 .leftbar{
+  @include themify($themes){
   flex: 2;
   position: sticky;
   top: 70px;
   height: calc(100vh - 70px );
   overflow: scroll;
+  background-color: themed("bg");
+  color:themed("textColor");
   
   &::-webkit-scrollbar{
     display: none;
@@ -13,7 +18,7 @@ hr{
   margin: 20px 0;
   border: none;
   height: 0.5px;
-  background-color: lightgray;
+  background-color: themed("border");
 }
   .container{
     padding: 20px;
@@ -62,4 +67,5 @@ hr{
       }
     }
   }
+}
 }
