--- a/src/components/navbar/navBar.scss
+++ b/src/components/navbar/navBar.scss
@@ -1,36 +1,43 @@
+@import "../../styles.scss";
+
 .navbar{
+  @include themify($themes){
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
   height: 50px;
-  border-bottom: 1px solid lightgrey;
+  border-bottom: 1px solid themed("border");
   position: sticky;
   top: 0;
-  background-color: #fff;
+  background-color: themed("bg");
+  color: themed("textColor");
 
   .left{
     display: flex;
     align-items: center;
     gap: 30px;
 
+    // --- Logo ----//
     span{
       font-weight: bold;
       font-size: 20px;
-      color: darkblue;
+      color: themed('logo');
     }
 
     .search{
       display: flex;
       align-items: center;
       gap: 10px;
-      border: 1px solid lightgray;
+      border: 1px solid themed("border");
       border-radius: 5px;
       padding: 5px;
 
       input{
         border: none;
         width: 500px;
+        background-color: transparent;
+        color: themed("textColor");
       }
 
     }
@@ -57,8 +64,7 @@
       span{
 
       }
-
     }
-
   }
+  } 
 }
