--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -45,6 +45,18 @@
           }
         }
       }
+
+      .content{
+        margin: 20px 0px;
+
+        img{
+          width: 100%;
+          max-height: 500px;
+          object-fit: cover;
+          margin-top: 20px;
+        }
+      }
+
     }
   }
 }
