--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -57,6 +57,21 @@
         }
       }
 
+      .info{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+
+        .item{
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          cursor: pointer;
+          font-size: 14px;
+          
+        }
+      }
+
     }
   }
 }
