--- a/src/components/navbar/navBar.scss
+++ b/src/components/navbar/navBar.scss
@@ -39,6 +39,14 @@
         width: 500px;
         background-color: transparent;
         color: themed("textColor");
+
+        @include mobile{
+          display: none;
+        }
+
+        @include tablet{
+          width: 200px;    
+        }
       }
 
     }
@@ -50,11 +58,20 @@
     align-items: center;
     gap: 20px;
 
+    @include mobile{
+      display: none;
+    }
+
     .user{
       display: flex;
       align-items: center;
       gap: 10px;
       font-weight: 500;
+
+      @include tablet{
+        display: none;
+      }
+
       img{
         width: 30px;
         height: 30px;
