--- a/src/components/stories/stories.scss
+++ b/src/components/stories/stories.scss
@@ -1,14 +1,33 @@
+@import "../../styles.scss";
+
 .stories{
   display: flex;
   gap: 10px;
   height: 200px;
   margin-bottom: 30px;
 
+  @include mobile{
+    height: 50px;
+    justify-content: space-between;
+  }
+
+  @include tablet{
+    height: 150px;  
+    gap: 15px;
+  }
+
   .story{
     flex: 1;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
+
+    @include mobile{
+      flex: none;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+    }
 
     img{
       width: 100%;
@@ -23,6 +42,10 @@
       left: 10px;
       color: white;
       font-weight: 500;
+
+      @include mobile{
+        display: none;
+      }
     }
 
     button{
@@ -40,6 +63,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
+      @include mobile{
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+      }
     }
   }
 }
