--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -17,6 +17,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        position: relative;
 
         .userInfo{
           display: flex;
@@ -43,6 +44,18 @@
               font-size: 12px;
             }
           }
+        }
+
+        button {
+          position: absolute;
+          top: 30px;
+          right: 0px;
+          border: none;
+          background-color: #f0544f;
+          padding: 5px;
+          cursor: pointer;
+          color: white;
+          border-radius: 3px;
         }
       }
 
