--- a/client/src/components/rightBar/rightBar.scss
+++ b/client/src/components/rightBar/rightBar.scss
@@ -97,6 +97,7 @@
             padding: 5px;
             color: white;
             cursor: pointer;
+            border-radius: 3px;
 
             &:first-child{
               background-color: #5271ff;
