--- a/client/src/components/update/update.scss
+++ b/client/src/components/update/update.scss
@@ -1,13 +1,123 @@
-.update{
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 50%;
-  height: 50%;
-  background-color: white;
-  padding: 50px;
-  z-index: 999;
+@import "../../styles.scss";
+
+.update {
+  @include themify($themes) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+
+    .wrapper {
+      margin: auto;
+      width: 40%;
+      height: 70%;
+      background-color: themed("bg");
+      padding: 50px;
+      z-index: 999;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+      -moz-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+      box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
+      position: relative;
+      border-radius: 10px;
+      overflow: scroll;
+      
+      @include mobile {
+        width: 100%;
+        height: 100%;
+      }
+
+      h1 {
+        color: rgb(74, 74, 74);
+      
+        @include mobile {
+         font-size: 20px;
+        }
+      
+      }
+
+      form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        .files {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 50px;
+        }
+
+        label {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          color: gray;
+          font-size: 14px;
+
+          .imgContainer {
+            position: relative;
+            img {
+              width: 80px;
+              height: 80px;
+              object-fit: cover;
+              border-radius: 5px;
+              opacity: 70%;
+            }
+
+            .icon {
+              position: absolute;
+              top: 0;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              margin: auto;
+              font-size: 30px;
+              color: white;
+              cursor: pointer;
+            }
+          }
+        }
+
+        input {
+          padding: 5px;
+          border: none;
+          border-bottom: 1px solid themed("border");
+          color: gray;
+          background-color: transparent;
+        }
+
+        button {
+          border: none;
+          padding: 10px;
+          cursor: pointer;
+          color: white;
+          border-radius: 3px;
+          background-color: #5271ff;
+        }
+      }
+
+      .close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-weight: bold;
+        width: 30px;
+        height: auto;
+        border: none;
+        border-radius: 3px;
+        background-color: #f0544f;
+        padding: 5px;
+        cursor: pointer;
+        color: white;
+      }
+    }
+  }
 }
