--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -40,6 +40,7 @@
         width: 50%;
         padding: 10px;
         border: none;
+        border-radius: 3px;
         background-color: white;
         color: rebeccapurple;
         font-weight: bold;
@@ -74,12 +75,35 @@
           width: 50%;
           padding: 10px;
           border: none;
+          border-radius: 3px;
           background-color: #938eef;
           color: white;
           font-weight: bold;
           cursor: pointer;
         }
       }
+
+      .demo {
+        border-style: solid;
+        border-color:lightgray;
+        border-radius: 3px;
+        padding: 10px;
+
+        .demo-title {
+          color: rgb(80, 80, 80);
+          font-weight: 700;
+          font-size: 16px;
+          text-align: center;
+          padding-bottom: 10px;
+        }
+
+        .demo-details {
+          color: gray;
+          font-weight: 400;
+          font-size: 14px;
+          text-align: center;
+        }
+      } 
     }
   }
 }
