--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -41,6 +41,7 @@
         width: 50%;
         padding: 10px;
         border: none;
+        border-radius: 3px;
         background-color: white;
         color: rebeccapurple;
         font-weight: bold;
@@ -75,6 +76,7 @@
           width: 50%;
           padding: 10px;
           border: none;
+          border-radius: 3px;
           background-color: #938eef;
           color: white;
           font-weight: bold;
